// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 1`] = `
[
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-object-action",
    ],
    "id": "introductions-1",
    "level": "a1",
    "modelVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-1",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-1-m1",
          "introductions-1-m2",
          "introductions-1-m3",
          "introductions-1-m4",
          "introductions-1-m5",
          "introductions-1-m6",
          "introductions-1-m7",
          "introductions-1-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-1-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-1-t1",
          "introductions-1-t2",
          "introductions-1-t3",
          "introductions-1-t4",
          "introductions-1-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-1-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-location-action",
      "a1-family-nominative-action",
      "a1-family-object-action",
    ],
    "id": "introductions-2",
    "level": "a1",
    "modelVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-2",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-2-m1",
          "introductions-2-m2",
          "introductions-2-m3",
          "introductions-2-m4",
          "introductions-2-m5",
          "introductions-2-m6",
          "introductions-2-m7",
          "introductions-2-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-2-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-2-t1",
          "introductions-2-t2",
          "introductions-2-t3",
          "introductions-2-t4",
          "introductions-2-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-2-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-actions",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-object-action",
    ],
    "id": "introductions-3",
    "level": "a1",
    "modelVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-3",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-3-m1",
          "introductions-3-m2",
          "introductions-3-m3",
          "introductions-3-m4",
          "introductions-3-m5",
          "introductions-3-m6",
          "introductions-3-m7",
          "introductions-3-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-3-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-3-t1",
          "introductions-3-t2",
          "introductions-3-t3",
          "introductions-3-t4",
          "introductions-3-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-3-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-origins",
    "supportingCanDoIds": [
      "a1-can-do-identity",
    ],
  },
  {
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "familyIds": [
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-object-action",
      "a1-family-nominative-action",
    ],
    "id": "introductions-4",
    "level": "a1",
    "modelVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
    ],
    "moduleId": "introductions",
    "practice": {
      "lessonId": "introductions-4",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-4-m1",
          "introductions-4-m2",
          "introductions-4-m3",
          "introductions-4-m4",
          "introductions-4-m5",
          "introductions-4-m6",
          "introductions-4-m7",
          "introductions-4-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-4-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-4-t1",
          "introductions-4-t2",
          "introductions-4-t3",
          "introductions-4-t4",
          "introductions-4-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-4-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "supportingCanDoIds": [
      "a1-can-do-origins",
      "a1-can-do-actions",
    ],
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 2`] = `
[
  {
    "lessonId": "introductions-1",
    "level": "a1",
    "moduleId": "introductions",
    "position": 5,
  },
  {
    "lessonId": "introductions-2",
    "level": "a1",
    "moduleId": "introductions",
    "position": 6,
  },
  {
    "lessonId": "introductions-3",
    "level": "a1",
    "moduleId": "introductions",
    "position": 7,
  },
  {
    "lessonId": "introductions-4",
    "level": "a1",
    "moduleId": "introductions",
    "position": 8,
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact assembled FoundationCatalogs lesson/position rows for module 2 3`] = `
[
  {
    "id": "a1-verb-use-a1-sense-be",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-1",
      "roundId": "introductions-1-round-1",
      "targetVariantId": "introductions-1-m1",
    },
    "introductionLessonId": "introductions-1",
    "introductionVariantIds": [
      "introductions-1-m1",
      "introductions-1-m4",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-be",
  },
  {
    "id": "a1-verb-use-a1-sense-live",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-1",
      "roundId": "introductions-1-round-1",
      "targetVariantId": "introductions-1-m5",
    },
    "introductionLessonId": "introductions-1",
    "introductionVariantIds": [
      "introductions-1-m5",
      "introductions-1-m6",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-live",
  },
  {
    "id": "a1-verb-use-a1-sense-study",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-1",
      "roundId": "introductions-1-round-1",
      "targetVariantId": "introductions-1-m7",
    },
    "introductionLessonId": "introductions-1",
    "introductionVariantIds": [
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-study",
  },
  {
    "id": "a1-verb-use-a1-sense-work",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-2",
      "roundId": "introductions-2-round-1",
      "targetVariantId": "introductions-2-m1",
    },
    "introductionLessonId": "introductions-2",
    "introductionVariantIds": [
      "introductions-2-m1",
      "introductions-2-m3",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-work",
  },
  {
    "id": "a1-verb-use-a1-sense-understand",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-2",
      "roundId": "introductions-2-round-1",
      "targetVariantId": "introductions-2-m4",
    },
    "introductionLessonId": "introductions-2",
    "introductionVariantIds": [
      "introductions-2-m4",
      "introductions-2-m5",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-understand",
  },
  {
    "id": "a1-verb-use-a1-sense-do",
    "introductionExercise": {
      "exerciseKind": "tile-ordering",
      "lessonId": "introductions-2",
      "roundId": "introductions-2-round-1",
      "targetVariantId": "introductions-2-m6",
    },
    "introductionLessonId": "introductions-2",
    "introductionVariantIds": [
      "introductions-2-m6",
      "introductions-2-m7",
    ],
    "laterUses": [],
    "learningUse": "productive",
    "senseId": "a1-sense-do",
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact merged EN/IT translation+scenario copy for module 2 1`] = `
{
  "en": {
    "introductions-1-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m1-translation": "Yuki is a student.",
    "introductions-1-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m2-translation": "Ken is a teacher.",
    "introductions-1-m3-scenario": "You are chatting with a colleague at work.",
    "introductions-1-m3-translation": "Mina is an office worker.",
    "introductions-1-m4-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m4-translation": "I am a student.",
    "introductions-1-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-m5-translation": "Yuki lives in Tokyo.",
    "introductions-1-m6-scenario": "You are chatting with a colleague at work.",
    "introductions-1-m6-translation": "Mina lives in Osaka.",
    "introductions-1-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m7-translation": "Yuki studies Japanese.",
    "introductions-1-m8-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-m8-translation": "The classmate studies English.",
    "introductions-1-t1-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t1-translation": "Ken is a student.",
    "introductions-1-t2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-1-t2-translation": "Ken lives in Tokyo.",
    "introductions-1-t3-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t3-translation": "Mina studies Japanese.",
    "introductions-1-t4-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t4-translation": "Mina is a teacher.",
    "introductions-1-t5-scenario": "You are in the language class, talking about your studies.",
    "introductions-1-t5-translation": "The classmate lives in Tokyo.",
    "introductions-2-m1-scenario": "You are chatting with a colleague at work.",
    "introductions-2-m1-translation": "Ken works at the office.",
    "introductions-2-m2-scenario": "You are chatting with a colleague at work.",
    "introductions-2-m2-translation": "Mina works at the office.",
    "introductions-2-m3-scenario": "You are chatting with a colleague at work.",
    "introductions-2-m3-translation": "Yuki works at the restaurant.",
    "introductions-2-m4-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m4-translation": "Yuki understands Japanese.",
    "introductions-2-m5-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m5-translation": "Ken understands English.",
    "introductions-2-m6-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m6-translation": "Yuki does homework.",
    "introductions-2-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m7-translation": "Mina does homework.",
    "introductions-2-m8-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-m8-translation": "Ken studies Japanese.",
    "introductions-2-t1-scenario": "You are chatting with a colleague at work.",
    "introductions-2-t1-translation": "Mina works at the restaurant.",
    "introductions-2-t2-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t2-translation": "Ken understands English.",
    "introductions-2-t3-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t3-translation": "Mina understands Japanese.",
    "introductions-2-t4-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t4-translation": "Mina does homework.",
    "introductions-2-t5-scenario": "You are in the language class, talking about your studies.",
    "introductions-2-t5-translation": "Yuki studies English.",
    "introductions-3-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m1-translation": "Yuki is Japanese.",
    "introductions-3-m2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m2-translation": "Ken is Italian.",
    "introductions-3-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m3-translation": "Mina is American.",
    "introductions-3-m4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m4-translation": "Yuki lives in Tokyo.",
    "introductions-3-m5-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m5-translation": "Ken lives in Osaka.",
    "introductions-3-m6-scenario": "You are in the language class, talking about your studies.",
    "introductions-3-m6-translation": "Yuki studies Japanese.",
    "introductions-3-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-3-m7-translation": "Mina studies Italian.",
    "introductions-3-m8-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-m8-translation": "Ken lives in Kyoto.",
    "introductions-3-t1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-t1-translation": "Mina is Japanese.",
    "introductions-3-t2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-t2-translation": "Mina lives in Kyoto.",
    "introductions-3-t3-scenario": "You are in the language class, talking about your studies.",
    "introductions-3-t3-translation": "Yuki studies Italian.",
    "introductions-3-t4-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-3-t4-translation": "Ken is American.",
    "introductions-3-t5-scenario": "You are chatting with a colleague at work.",
    "introductions-3-t5-translation": "Mina lives in Osaka.",
    "introductions-4-m1-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m1-translation": "Yuki is a student.",
    "introductions-4-m2-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m2-translation": "Ken is an engineer.",
    "introductions-4-m3-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-m3-translation": "Yuki lives in Tokyo.",
    "introductions-4-m4-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m4-translation": "Ken works at the office.",
    "introductions-4-m5-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-m5-translation": "Yuki studies Japanese.",
    "introductions-4-m6-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-m6-translation": "Mina understands Japanese.",
    "introductions-4-m7-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-m7-translation": "Yuki does homework.",
    "introductions-4-m8-scenario": "You are chatting with a colleague at work.",
    "introductions-4-m8-translation": "Mina is an office worker.",
    "introductions-4-t1-scenario": "You are chatting with a colleague at work.",
    "introductions-4-t1-translation": "Mina is an engineer.",
    "introductions-4-t2-scenario": "You have just met someone and are introducing yourselves.",
    "introductions-4-t2-translation": "Ken lives in Osaka.",
    "introductions-4-t3-scenario": "You are chatting with a colleague at work.",
    "introductions-4-t3-translation": "Mina works at the office.",
    "introductions-4-t4-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-t4-translation": "Ken understands English.",
    "introductions-4-t5-scenario": "You are in the language class, talking about your studies.",
    "introductions-4-t5-translation": "Mina does homework.",
  },
  "it": {
    "introductions-1-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m1-translation": "Yuki è una studentessa.",
    "introductions-1-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m2-translation": "Ken è un insegnante.",
    "introductions-1-m3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-m3-translation": "Mina è un'impiegata.",
    "introductions-1-m4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m4-translation": "Io sono uno studente.",
    "introductions-1-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-m5-translation": "Yuki vive a Tokyo.",
    "introductions-1-m6-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-1-m6-translation": "Mina vive a Osaka.",
    "introductions-1-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m7-translation": "Yuki studia il giapponese.",
    "introductions-1-m8-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-m8-translation": "Il compagno di classe studia l'inglese.",
    "introductions-1-t1-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t1-translation": "Ken è uno studente.",
    "introductions-1-t2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-1-t2-translation": "Ken vive a Tokyo.",
    "introductions-1-t3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t3-translation": "Mina studia il giapponese.",
    "introductions-1-t4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t4-translation": "Mina è un insegnante.",
    "introductions-1-t5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-1-t5-translation": "Il compagno di classe vive a Tokyo.",
    "introductions-2-m1-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-m1-translation": "Ken lavora in ufficio.",
    "introductions-2-m2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-m2-translation": "Mina lavora in ufficio.",
    "introductions-2-m3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-m3-translation": "Yuki lavora al ristorante.",
    "introductions-2-m4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m4-translation": "Yuki capisce il giapponese.",
    "introductions-2-m5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m5-translation": "Ken capisce l'inglese.",
    "introductions-2-m6-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m6-translation": "Yuki fa i compiti.",
    "introductions-2-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m7-translation": "Mina fa i compiti.",
    "introductions-2-m8-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-m8-translation": "Ken studia il giapponese.",
    "introductions-2-t1-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-2-t1-translation": "Mina lavora al ristorante.",
    "introductions-2-t2-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t2-translation": "Ken capisce l'inglese.",
    "introductions-2-t3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t3-translation": "Mina capisce il giapponese.",
    "introductions-2-t4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t4-translation": "Mina fa i compiti.",
    "introductions-2-t5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-2-t5-translation": "Yuki studia l'inglese.",
    "introductions-3-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m1-translation": "Yuki è giapponese.",
    "introductions-3-m2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m2-translation": "Ken è italiano.",
    "introductions-3-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m3-translation": "Mina è americana.",
    "introductions-3-m4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m4-translation": "Yuki vive a Tokyo.",
    "introductions-3-m5-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m5-translation": "Ken vive a Osaka.",
    "introductions-3-m6-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-3-m6-translation": "Yuki studia il giapponese.",
    "introductions-3-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-3-m7-translation": "Mina studia l'italiano.",
    "introductions-3-m8-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-m8-translation": "Ken vive a Kyoto.",
    "introductions-3-t1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-t1-translation": "Mina è giapponese.",
    "introductions-3-t2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-t2-translation": "Mina vive a Kyoto.",
    "introductions-3-t3-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-3-t3-translation": "Yuki studia l'italiano.",
    "introductions-3-t4-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-3-t4-translation": "Ken è americano.",
    "introductions-3-t5-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-3-t5-translation": "Mina vive a Osaka.",
    "introductions-4-m1-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m1-translation": "Yuki è una studentessa.",
    "introductions-4-m2-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m2-translation": "Ken è un ingegnere.",
    "introductions-4-m3-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-m3-translation": "Yuki vive a Tokyo.",
    "introductions-4-m4-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m4-translation": "Ken lavora in ufficio.",
    "introductions-4-m5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-m5-translation": "Yuki studia il giapponese.",
    "introductions-4-m6-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-m6-translation": "Mina capisce il giapponese.",
    "introductions-4-m7-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-m7-translation": "Yuki fa i compiti.",
    "introductions-4-m8-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-m8-translation": "Mina è un'impiegata.",
    "introductions-4-t1-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-t1-translation": "Mina è un ingegnere.",
    "introductions-4-t2-scenario": "Hai appena conosciuto qualcuno e vi state presentando.",
    "introductions-4-t2-translation": "Ken vive a Osaka.",
    "introductions-4-t3-scenario": "Chiacchieri con un collega al lavoro.",
    "introductions-4-t3-translation": "Mina lavora in ufficio.",
    "introductions-4-t4-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-t4-translation": "Ken capisce l'inglese.",
    "introductions-4-t5-scenario": "Sei nell'aula di lingua e parli dei tuoi studi.",
    "introductions-4-t5-translation": "Mina fa i compiti.",
  },
}
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact module recipe (module02Recipe) 1`] = `
{
  "id": "introductions",
  "lessonIds": [
    "introductions-1",
    "introductions-2",
    "introductions-3",
    "introductions-4",
  ],
  "order": 2,
  "outcomeCopyId": "a1-module-outcome-introductions",
  "prerequisiteIds": [
    "sounds",
  ],
}
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact realized Japanese/rōmaji/fingerprint for every module-2 variant 1`] = `
[
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m1",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m2",
    "jp": "けんはせんせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはせんせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-m3",
    "jp": "みなはかいしゃいんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa kaishain desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-office-worker,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはかいしゃいんです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m4",
    "jp": "がくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-learner|addressee=a1-role-teacher|subjectReferent=a1-referent-self|subjectRealization=omitted|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-watashi",
    "visibleTargetKey": "がくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-m5",
    "jp": "ゆきはとうきょうにすみます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-live",
    "romaji": "yuki wa toukyou ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-tokyo,predicate=a1-value-live,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはとうきょうにすみます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-1-m6",
    "jp": "おおさかにすみます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-live",
    "romaji": "oosaka ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=omitted|sense=a1-sense-live|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-osaka,predicate=a1-value-live,subject=a1-value-mina",
    "visibleTargetKey": "おおさかにすみます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m7",
    "jp": "ゆきはにほんごをべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study",
    "romaji": "yuki wa nihongo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-study,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんごをべんきょうします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-m8",
    "jp": "えいごをべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study",
    "romaji": "eigo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-classmate|addressee=a1-role-teacher|subjectReferent=a1-referent-classmate|subjectRealization=omitted|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-study,subject=a1-value-classmate-subject",
    "visibleTargetKey": "えいごをべんきょうします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t1",
    "jp": "けんはがくせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはがくせいです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-1-t2",
    "jp": "とうきょうにすみます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-live",
    "romaji": "toukyou ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=omitted|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-tokyo,predicate=a1-value-live,subject=a1-value-ken",
    "visibleTargetKey": "とうきょうにすみます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t3",
    "jp": "みなはにほんごをべんきょうします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-study",
    "romaji": "mina wa nihongo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-study,subject=a1-value-mina",
    "visibleTargetKey": "みなはにほんごをべんきょうします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t4",
    "jp": "みなはせんせいです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa sensei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-teacher,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはせんせいです",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-1-t5",
    "jp": "クラスメートはとうきょうにすみます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-live",
    "romaji": "kurasumeeto wa toukyou ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-classmate|addressee=a1-role-teacher|subjectReferent=a1-referent-classmate|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-classroom|form=affirmative:present:polite|slots=location=a1-value-loc-tokyo,predicate=a1-value-live,subject=a1-value-classmate-subject",
    "visibleTargetKey": "クラスメートはとうきょうにすみます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-m1",
    "jp": "けんはかいしゃではたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work",
    "romaji": "ken wa kaisha de hatarakimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-work|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-company,predicate=a1-value-work,subject=a1-value-ken",
    "visibleTargetKey": "けんはかいしゃではたらきます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-m2",
    "jp": "みなはかいしゃではたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work",
    "romaji": "mina wa kaisha de hatarakimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-work|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-company,predicate=a1-value-work,subject=a1-value-mina",
    "visibleTargetKey": "みなはかいしゃではたらきます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-m3",
    "jp": "レストランではたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work",
    "romaji": "resutoran de hatarakimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=omitted|sense=a1-sense-work|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-restaurant,predicate=a1-value-work,subject=a1-value-yuki",
    "visibleTargetKey": "レストランではたらきます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m4",
    "jp": "ゆきはにほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "yuki wa nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m5",
    "jp": "えいごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "えいごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m6",
    "jp": "ゆきはしゅくだいをします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-do",
    "romaji": "yuki wa shukudai o shimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-do|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-homework,predicate=a1-value-do,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはしゅくだいをします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m7",
    "jp": "しゅくだいをします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-do",
    "romaji": "shukudai o shimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=omitted|sense=a1-sense-do|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-homework,predicate=a1-value-do,subject=a1-value-mina",
    "visibleTargetKey": "しゅくだいをします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-m8",
    "jp": "けんはにほんごをべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study",
    "romaji": "ken wa nihongo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-study,subject=a1-value-ken",
    "visibleTargetKey": "けんはにほんごをべんきょうします",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-2-t1",
    "jp": "みなはレストランではたらきます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-work",
    "romaji": "mina wa resutoran de hatarakimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-work|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-restaurant,predicate=a1-value-work,subject=a1-value-mina",
    "visibleTargetKey": "みなはレストランではたらきます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t2",
    "jp": "けんはえいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "ken wa eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "けんはえいごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t3",
    "jp": "にほんごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-mina",
    "visibleTargetKey": "にほんごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t4",
    "jp": "みなはしゅくだいをします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-do",
    "romaji": "mina wa shukudai o shimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-do|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-homework,predicate=a1-value-do,subject=a1-value-mina",
    "visibleTargetKey": "みなはしゅくだいをします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-2-t5",
    "jp": "ゆきはえいごをべんきょうします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-study",
    "romaji": "yuki wa eigo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-study,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはえいごをべんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m1",
    "jp": "ゆきはにほんじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa nihonjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese-person,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m2",
    "jp": "けんはイタリアじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa itariajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-italian-person,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはイタリアじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m3",
    "jp": "みなはアメリカじんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa amerikajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-american-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはアメリカじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m4",
    "jp": "ゆきはとうきょうにすみます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-live",
    "romaji": "yuki wa toukyou ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-tokyo,predicate=a1-value-live,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはとうきょうにすみます",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m5",
    "jp": "おおさかにすみます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-live",
    "romaji": "oosaka ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=omitted|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-osaka,predicate=a1-value-live,subject=a1-value-ken",
    "visibleTargetKey": "おおさかにすみます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-3-m6",
    "jp": "ゆきはにほんごをべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study",
    "romaji": "yuki wa nihongo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-study,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんごをべんきょうします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-3-m7",
    "jp": "イタリアごをべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study",
    "romaji": "itariago o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=omitted|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-study,subject=a1-value-mina",
    "visibleTargetKey": "イタリアごをべんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-m8",
    "jp": "けんはきょうとにすみます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-live",
    "romaji": "ken wa kyouto ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-kyoto,predicate=a1-value-live,subject=a1-value-ken",
    "visibleTargetKey": "けんはきょうとにすみます",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-t1",
    "jp": "みなはにほんじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa nihonjin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-japanese-person,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはにほんじんです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-t2",
    "jp": "きょうとにすみます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-live",
    "romaji": "kyouto ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=omitted|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-kyoto,predicate=a1-value-live,subject=a1-value-mina",
    "visibleTargetKey": "きょうとにすみます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-3-t3",
    "jp": "ゆきはイタリアごをべんきょうします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-study",
    "romaji": "yuki wa itariago o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-italian,predicate=a1-value-study,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはイタリアごをべんきょうします",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-3-t4",
    "jp": "けんはアメリカじんです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa amerikajin desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-american-person,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはアメリカじんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-3-t5",
    "jp": "みなはおおさかにすみます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-live",
    "romaji": "mina wa oosaka ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-osaka,predicate=a1-value-live,subject=a1-value-mina",
    "visibleTargetKey": "みなはおおさかにすみます",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m1",
    "jp": "ゆきはがくせいです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "yuki wa gakusei desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-first-meeting|form=affirmative:present:polite|slots=object=a1-value-obj-student,predicate=a1-value-be,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはがくせいです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m2",
    "jp": "けんはエンジニアです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "ken wa enjinia desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-engineer,predicate=a1-value-be,subject=a1-value-ken",
    "visibleTargetKey": "けんはエンジニアです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-m3",
    "jp": "ゆきはとうきょうにすみます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-live",
    "romaji": "yuki wa toukyou ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-tokyo,predicate=a1-value-live,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはとうきょうにすみます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m4",
    "jp": "けんはかいしゃではたらきます",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-work",
    "romaji": "ken wa kaisha de hatarakimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-work|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-company,predicate=a1-value-work,subject=a1-value-ken",
    "visibleTargetKey": "けんはかいしゃではたらきます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-m5",
    "jp": "ゆきはにほんごをべんきょうします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-study",
    "romaji": "yuki wa nihongo o benkyoushimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=explicit|sense=a1-sense-study|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-study,subject=a1-value-yuki",
    "visibleTargetKey": "ゆきはにほんごをべんきょうします",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-m6",
    "jp": "にほんごがわかります",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "nihongo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-japanese,predicate=a1-value-understand,subject=a1-value-mina",
    "visibleTargetKey": "にほんごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-m7",
    "jp": "しゅくだいをします",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-do",
    "romaji": "shukudai o shimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-yuki|addressee=a1-role-teacher|subjectReferent=a1-referent-yuki|subjectRealization=omitted|sense=a1-sense-do|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-homework,predicate=a1-value-do,subject=a1-value-yuki",
    "visibleTargetKey": "しゅくだいをします",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-m8",
    "jp": "みなはかいしゃいんです",
    "pedagogicalUse": "model",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa kaishain desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-office-worker,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはかいしゃいんです",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-t1",
    "jp": "みなはエンジニアです",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-be",
    "romaji": "mina wa enjinia desu",
    "semanticFingerprint": "family=a1-family-topic-copular|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-be|context=a1-context-workplace|form=affirmative:present:polite|slots=object=a1-value-obj-engineer,predicate=a1-value-be,subject=a1-value-mina",
    "visibleTargetKey": "みなはエンジニアです",
  },
  {
    "contextId": "a1-context-first-meeting",
    "id": "introductions-4-t2",
    "jp": "けんはおおさかにすみます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-live",
    "romaji": "ken wa oosaka ni sumimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=explicit|sense=a1-sense-live|context=a1-context-first-meeting|form=affirmative:present:polite|slots=location=a1-value-loc-osaka,predicate=a1-value-live,subject=a1-value-ken",
    "visibleTargetKey": "けんはおおさかにすみます",
  },
  {
    "contextId": "a1-context-workplace",
    "id": "introductions-4-t3",
    "jp": "みなはかいしゃではたらきます",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-work",
    "romaji": "mina wa kaisha de hatarakimasu",
    "semanticFingerprint": "family=a1-family-location-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-work|context=a1-context-workplace|form=affirmative:present:polite|slots=location=a1-value-loc-company,predicate=a1-value-work,subject=a1-value-mina",
    "visibleTargetKey": "みなはかいしゃではたらきます",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-t4",
    "jp": "えいごがわかります",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-understand",
    "romaji": "eigo ga wakarimasu",
    "semanticFingerprint": "family=a1-family-nominative-action|speaker=a1-role-ken|addressee=a1-role-teacher|subjectReferent=a1-referent-ken|subjectRealization=omitted|sense=a1-sense-understand|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-english,predicate=a1-value-understand,subject=a1-value-ken",
    "visibleTargetKey": "えいごがわかります",
  },
  {
    "contextId": "a1-context-classroom",
    "id": "introductions-4-t5",
    "jp": "みなはしゅくだいをします",
    "pedagogicalUse": "transfer",
    "predicateSenseId": "a1-sense-do",
    "romaji": "mina wa shukudai o shimasu",
    "semanticFingerprint": "family=a1-family-object-action|speaker=a1-role-mina|addressee=a1-role-teacher|subjectReferent=a1-referent-mina|subjectRealization=explicit|sense=a1-sense-do|context=a1-context-classroom|form=affirmative:present:polite|slots=object=a1-value-obj-homework,predicate=a1-value-do,subject=a1-value-mina",
    "visibleTargetKey": "みなはしゅくだいをします",
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact recipe/practice/diversity fields for every module-2 lesson 1`] = `
[
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
    ],
    "id": "introductions-1",
    "introducedConceptIds": [
      "a1-concept-topic-wa",
      "a1-concept-copula-desu",
      "a1-concept-location-particle",
      "a1-concept-object-wo",
    ],
    "introducedSenseIds": [
      "a1-sense-be",
      "a1-sense-live",
      "a1-sense-study",
    ],
    "modelVariantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
    ],
    "moduleId": "introductions",
    "order": 1,
    "practice": {
      "lessonId": "introductions-1",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-1-m1",
          "introductions-1-m2",
          "introductions-1-m3",
          "introductions-1-m4",
          "introductions-1-m5",
          "introductions-1-m6",
          "introductions-1-m7",
          "introductions-1-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-1-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-1-t1",
          "introductions-1-t2",
          "introductions-1-t3",
          "introductions-1-t4",
          "introductions-1-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-1-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-1-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
    ],
    "id": "introductions-2",
    "introducedConceptIds": [
      "a1-concept-location-particle",
      "a1-concept-nominative-ga",
      "a1-concept-object-wo",
    ],
    "introducedSenseIds": [
      "a1-sense-work",
      "a1-sense-understand",
      "a1-sense-do",
    ],
    "modelVariantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
    ],
    "moduleId": "introductions",
    "order": 2,
    "practice": {
      "lessonId": "introductions-2",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-2-m1",
          "introductions-2-m2",
          "introductions-2-m3",
          "introductions-2-m4",
          "introductions-2-m5",
          "introductions-2-m6",
          "introductions-2-m7",
          "introductions-2-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-2-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-2-t1",
          "introductions-2-t2",
          "introductions-2-t3",
          "introductions-2-t4",
          "introductions-2-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-2-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-2-m1",
    "supportingCanDoIds": [
      "a1-can-do-actions",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
    ],
    "id": "introductions-3",
    "introducedConceptIds": [
      "a1-concept-topic-wa",
      "a1-concept-copula-desu",
    ],
    "introducedSenseIds": [
      "a1-sense-be",
      "a1-sense-live",
      "a1-sense-study",
    ],
    "modelVariantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
    ],
    "moduleId": "introductions",
    "order": 3,
    "practice": {
      "lessonId": "introductions-3",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-3-m1",
          "introductions-3-m2",
          "introductions-3-m3",
          "introductions-3-m4",
          "introductions-3-m5",
          "introductions-3-m6",
          "introductions-3-m7",
          "introductions-3-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-3-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-3-t1",
          "introductions-3-t2",
          "introductions-3-t3",
          "introductions-3-t4",
          "introductions-3-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-3-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-origins",
    "spokenVariantId": "introductions-3-m1",
    "supportingCanDoIds": [
      "a1-can-do-identity",
    ],
  },
  {
    "contract": "instructional",
    "diversityConstraints": {
      "exerciseCountRange": [
        10,
        10,
      ],
      "maxTargetReuse": 2,
      "minContexts": 2,
      "minFamilies": 1,
      "minPredicates": 3,
      "minRoles": 3,
      "minTransferExercises": 5,
      "minUniqueTargets": 5,
      "modelCountRange": [
        8,
        8,
      ],
      "requireControlledConstruction": true,
    },
    "guidedVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
    ],
    "id": "introductions-4",
    "introducedConceptIds": [
      "a1-concept-topic-wa",
      "a1-concept-copula-desu",
      "a1-concept-location-particle",
      "a1-concept-object-wo",
      "a1-concept-nominative-ga",
    ],
    "introducedSenseIds": [
      "a1-sense-be",
      "a1-sense-live",
      "a1-sense-work",
    ],
    "modelVariantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
    ],
    "moduleId": "introductions",
    "order": 4,
    "practice": {
      "lessonId": "introductions-4",
      "roundOne": {
        "candidateVariantIds": [
          "introductions-4-m1",
          "introductions-4-m2",
          "introductions-4-m3",
          "introductions-4-m4",
          "introductions-4-m5",
          "introductions-4-m6",
          "introductions-4-m7",
          "introductions-4-m8",
        ],
        "exerciseKinds": [
          "tile-ordering",
          "choice",
          "completion",
        ],
        "id": "introductions-4-round-1",
        "purpose": "guided-controlled",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
      "roundTwo": {
        "candidateVariantIds": [
          "introductions-4-t1",
          "introductions-4-t2",
          "introductions-4-t3",
          "introductions-4-t4",
          "introductions-4-t5",
        ],
        "exerciseKinds": [
          "constrained-construction",
          "completion",
          "tile-ordering",
          "choice",
        ],
        "id": "introductions-4-round-2",
        "purpose": "transfer",
        "selectionPolicyId": "a1-selection-default",
        "targetCount": 5,
      },
    },
    "primaryCanDoId": "a1-can-do-identity",
    "spokenVariantId": "introductions-4-m1",
    "supportingCanDoIds": [
      "a1-can-do-origins",
      "a1-can-do-actions",
    ],
  },
]
`;

exports[`A1 characterization baseline · module 2 (introductions) — pre-kit-extraction > pins the exact variant ids and families (in authored order) per lesson 1`] = `
[
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-location-action",
      "a1-family-object-action",
      "a1-family-object-action",
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-object-action",
      "a1-family-topic-copular",
      "a1-family-location-action",
    ],
    "id": "introductions-1",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-learner",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-classmate",
      "a1-role-ken",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-mina",
      "a1-role-classmate",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-location-action|omitted|affirmative:present:polite|location,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|omitted|affirmative:present:polite|location,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-self",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-classmate",
      "a1-referent-ken",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-mina",
      "a1-referent-classmate",
    ],
    "variantIds": [
      "introductions-1-m1",
      "introductions-1-m2",
      "introductions-1-m3",
      "introductions-1-m4",
      "introductions-1-m5",
      "introductions-1-m6",
      "introductions-1-m7",
      "introductions-1-m8",
      "introductions-1-t1",
      "introductions-1-t2",
      "introductions-1-t3",
      "introductions-1-t4",
      "introductions-1-t5",
    ],
  },
  {
    "families": [
      "a1-family-location-action",
      "a1-family-location-action",
      "a1-family-location-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-object-action",
      "a1-family-object-action",
      "a1-family-object-action",
      "a1-family-location-action",
      "a1-family-nominative-action",
      "a1-family-nominative-action",
      "a1-family-object-action",
      "a1-family-object-action",
    ],
    "id": "introductions-2",
    "speakerRoles": [
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-mina",
      "a1-role-yuki",
    ],
    "structureKeys": [
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-location-action|omitted|affirmative:present:polite|location,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-nominative-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-mina",
      "a1-referent-yuki",
    ],
    "variantIds": [
      "introductions-2-m1",
      "introductions-2-m2",
      "introductions-2-m3",
      "introductions-2-m4",
      "introductions-2-m5",
      "introductions-2-m6",
      "introductions-2-m7",
      "introductions-2-m8",
      "introductions-2-t1",
      "introductions-2-t2",
      "introductions-2-t3",
      "introductions-2-t4",
      "introductions-2-t5",
    ],
  },
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-location-action",
      "a1-family-object-action",
      "a1-family-object-action",
      "a1-family-location-action",
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-object-action",
      "a1-family-topic-copular",
      "a1-family-location-action",
    ],
    "id": "introductions-3",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-mina",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-location-action|omitted|affirmative:present:polite|location,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|omitted|affirmative:present:polite|location,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-mina",
    ],
    "variantIds": [
      "introductions-3-m1",
      "introductions-3-m2",
      "introductions-3-m3",
      "introductions-3-m4",
      "introductions-3-m5",
      "introductions-3-m6",
      "introductions-3-m7",
      "introductions-3-m8",
      "introductions-3-t1",
      "introductions-3-t2",
      "introductions-3-t3",
      "introductions-3-t4",
      "introductions-3-t5",
    ],
  },
  {
    "families": [
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-location-action",
      "a1-family-object-action",
      "a1-family-nominative-action",
      "a1-family-object-action",
      "a1-family-topic-copular",
      "a1-family-topic-copular",
      "a1-family-location-action",
      "a1-family-location-action",
      "a1-family-nominative-action",
      "a1-family-object-action",
    ],
    "id": "introductions-4",
    "speakerRoles": [
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-ken",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-yuki",
      "a1-role-mina",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-mina",
      "a1-role-ken",
      "a1-role-mina",
    ],
    "structureKeys": [
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-topic-copular|explicit|affirmative:present:polite|object,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-location-action|explicit|affirmative:present:polite|location,predicate,subject",
      "a1-family-nominative-action|omitted|affirmative:present:polite|object,predicate,subject",
      "a1-family-object-action|explicit|affirmative:present:polite|object,predicate,subject",
    ],
    "subjectReferents": [
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-ken",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-yuki",
      "a1-referent-mina",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-mina",
      "a1-referent-ken",
      "a1-referent-mina",
    ],
    "variantIds": [
      "introductions-4-m1",
      "introductions-4-m2",
      "introductions-4-m3",
      "introductions-4-m4",
      "introductions-4-m5",
      "introductions-4-m6",
      "introductions-4-m7",
      "introductions-4-m8",
      "introductions-4-t1",
      "introductions-4-t2",
      "introductions-4-t3",
      "introductions-4-t4",
      "introductions-4-t5",
    ],
  },
]
`;
